# bur-onboard

./: .gitignore  INSTALLATION.md  INSTALLATION_v2.md  README.md  gazebo.repos  required.repos
.devcontainer/: devcontainer.json
docker/: .gitconfig  Dockerfile  Dockerfile.humble  Dockerfile.ubuntu  Dockerfile_v1  Dockerfile_v2  docker-compose.yml
docker/.cache/Microsoft/DeveloperTools/: deviceid
docker/.ssh/: known_hosts
docker/.vscode-server/data/: machineid
docker/.vscode-server/data/Machine/: .connection-token-cb0c47c0cfaad0757385834bd89d410c78a856c0  settings.json
scripts/: build  install_dependencies.sh  install_gazebo.sh  setup_repository.sh  setup_ros.sh
src/gnc/: README.md
src/gnc/bur_autonomy/: CMakeLists.txt  package.xml
src/gnc/bur_autonomy/behavior_trees/: comp_tree.xml  qualification_tree.xml  test.xml
src/gnc/bur_autonomy/include/: bt_nodes.h  manager_node.h
src/gnc/bur_autonomy/launch/: manager.launch.py
src/gnc/bur_autonomy/src/: bt_nodes.cpp  (+1 more)
src/gnc/bur_controller/: CMakeLists.txt  package.xml
src/gnc/bur_localization/: CMakeLists.txt  package.xml
src/gnc/bur_planner/: CMakeLists.txt  package.xml
src/gnc/bur_thruster_manager/: CMakeLists.txt  package.xml
src/gnc/simple_planner/: CMakeLists.txt  package.xml
src/launch/bur_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/launch/bur_bringup/bur_bringup/: topic_viewer.py
src/launch/bur_bringup/launch/: auv.launch.py  rov.launch.py
src/launch/bur_rov/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sensors/bur_sensors/: CMakeLists.txt  package.xml
(+28 files in other folders)
