<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bur_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ax90l0tl@gmail.com">grape</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>bur_controller</depend>
  <depend>bur_msgs</depend>
  <depend>bur_rov</depend>
  <depend>bur_sensors</depend>
  <depend>bur_thruster_manager</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
